chore: Add script to generate dist files after build

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && ./generate_dist.sh",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
